hphp/hack/test/implemented_by_hhi/implemented_by_no_param.hhi
<?hh
class C {
  <<__ImplementedBy()>>
  public function myMethod(): int;
}
